# python-minimal

./: .gitignore  README.md  pyproject.toml
