[tool.poetry]
name = "python-minimal"
version = "0.1.0"
description = "Minimal Python project boilerplate"
authors = ["Pascal Martineau <pascal@lewebsimple.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
